--- a/ee/web/index.html
+++ b/ee/web/index.html
@@ -5,7 +5,7 @@
     <title>Обработка данных форм</title>
 </head>
 <body>
-<form action="Model" method="post">
+<form action="Controller" method="post">
     <table width="200%" cellspacing="0" cellpadding="4">
         <tr>
             <td align="right" width="100">Имя:</td>
