--- a/ee/web/index.html
+++ b/ee/web/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
     <title>Обработка данных форм</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        input[type=text], input[type=password] {
+            width: 10%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+        input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+        hr {
+            border: 1px solid #f1f1f1;
+            margin-bottom: 25px;
+        }
+
+        a {
+            color: dodgerblue;
+        }
+
+    </style>
 </head>
 <body>
-<form action="Controller" method="post">
+<form action="Model" method="post">
     <table width="200%" cellspacing="0" cellpadding="4">
         <tr>
-            <td align="right" width="100">Имя:</td>
+            <td align="right" width="150">Имя:</td>
             <td><input type="text" name="TEXT_1" maxlength="50" size="20"></td>
         </tr>
         <tr>
@@ -16,12 +49,24 @@
             <td><input type="text" name="TEXT_2" maxlength="50" size="20"></td>
         </tr>
         <tr>
-            <td align="right">Дата рождения:</td>
+            <td align="right">Email:</td>
             <td><input type="text" name="TEXT_3" maxlength="50" size="20"></td>
         </tr>
         <tr>
+            <td align="right">Пароль:</td>
+            <td><input type="text" name="TEXT_4" maxlength="50" size="20"></td>
+        </tr>
+        <tr>
+            <td align="right">Подтверждение пароля:</td>
+            <td><input type="text" name="TEXT_5" maxlength="50" size="20"></td>
+        </tr>
+        <tr>
+            <td align="right">Дата рождения:</td>
+            <td><input type="text" name="TEXT_6" maxlength="50" size="20"></td>
+        </tr>
+        <tr>
             <td align="right">Пол:</td>
-            <td><select type="select" name="TEXT_4" rows="1">
+            <td><select type="select" name="TEXT_7" rows="1">
                 <option>мужской</option>
                 <option>женский</option>
                 <option>не определилось</option>
@@ -31,14 +76,14 @@
         <tr>
             <td align="right">Хотите поговорить о баге?</td>
             <td>
-                <input name="TEXT_6" type="radio" value="Аминь"> Аминь
-                <input name="TEXT_6" type="radio" value="Алюминь"> Алюминь
-                <input name="TEXT_6" type="radio" value="Нет" checked> Нет
+                <input name="TEXT_8" type="radio" value="Аминь"> Аминь
+                <input name="TEXT_8" type="radio" value="Алюминь"> Алюминь
+                <input name="TEXT_8" type="radio" value="Нет" checked> Нет
             </td>
         </tr>
         <tr>
             <td align="right" valign="top">Комментарий</td>
-            <td><textarea name="TEXT_5" cols="35" rows="10"></textarea></td>
+            <td><textarea name="TEXT_9" cols="49" rows="10"></textarea></td>
         </tr>
     </table>
     <br>
