--- a/ee/web/Signup.html
+++ b/ee/web/Signup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Обработка данных форм</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+    <title>Sign up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8"
+          http-equiv="Cache-Control" content="no-cache">
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -31,14 +32,10 @@
             margin-bottom: 25px;
         }
 
-        a {
-            color: dodgerblue;
-        }
-
     </style>
 </head>
 <body>
-<form action="Model" method="post">
+<form action="Controller" method="post">
     <table width="200%" cellspacing="0" cellpadding="4">
         <tr>
             <td align="right" width="150">Имя:</td>
